[gd_scene load_steps=14 format=3 uid="uid://ch2hw7pw87h1w"]

[ext_resource type="Script" uid="uid://cufi7ippcj50l" path="res://scripts/ui/enemy.gd" id="1_4ra3w"]
[ext_resource type="Texture2D" uid="uid://dm4l6xah288m3" path="res://sprites/inimigo_morto.png" id="2_c4w8v"]
[ext_resource type="Texture2D" uid="uid://bdw8qlaa80sqq" path="res://images/enemy-see-mask.png" id="3_c4w8v"]
[ext_resource type="Texture2D" uid="uid://23d7aiyag1u" path="res://sprites/enemy_green.png" id="3_xwavj"]
[ext_resource type="Texture2D" uid="uid://b3gff4rknhrit" path="res://sprites/ui/exclamation.png" id="5_c4w8v"]
[ext_resource type="AudioStream" uid="uid://cv5r6n3pp4q4w" path="res://sounds/guard_chase_alert.mp3" id="6_xwavj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xwavj"]
atlas = ExtResource("2_c4w8v")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_nenq2"]
atlas = ExtResource("3_xwavj")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_md484"]
atlas = ExtResource("3_xwavj")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipns3"]
atlas = ExtResource("3_xwavj")
region = Rect2(16, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_nk33d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwavj")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nenq2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_md484")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipns3")
}],
"loop": true,
"name": &"walking",
"speed": 3.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_wf2uy"]
radius = 2.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5uy6h"]
radius = 7.0

[node name="Enemy" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1_4ra3w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_nk33d")
animation = &"walking"
frame_progress = 0.3295

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_wf2uy")

[node name="VisionCone" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.505882)
show_behind_parent = true
position = Vector2(0, 4.76837e-07)
scale = Vector2(0.05, 0.05)
texture = ExtResource("3_c4w8v")
offset = Vector2(0, 100)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 4.0
target_desired_distance = 4.0
avoidance_enabled = true
debug_path_custom_color = Color(1, 0.0941176, 1, 1)

[node name="kill_area" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="kill_area"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_5uy6h")

[node name="ExclamationMark" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -10)
texture = ExtResource("5_c4w8v")

[node name="enemyAlertedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_xwavj")

[connection signal="body_entered" from="kill_area" to="." method="_on_kill_area_body_entered"]
